Fixed dark mode fab navigation buttons

--- a/src/components/BibleViewer/BibleChapterViewer.scss
+++ b/src/components/BibleViewer/BibleChapterViewer.scss
@@ -11,6 +11,7 @@
   min-height: 100%;
   display: flex;
   flex-direction: column;
+  gap: 4px;
   .verse-selected {
     text-decoration: underline;
     text-decoration-thickness: 2px;
@@ -29,20 +30,11 @@
 }
 #chapter-viewer ion-fab-button {
   margin: 0;
-  --background: linear-gradient(0deg, #fdfcff, #fdfcff), #fffbfe;
-  /* M3/Elevation Light/3 */
 
   --box-shadow: 0px 4px 8px 3px rgba(0, 0, 0, 0.15),
     0px 1px 3px rgba(0, 0, 0, 0.3);
   --border-radius: 12px;
-  --color: #0060a8;
 }
-/* #chapter-viewer ion-fab .left {
-  left: 0;
-}  */
-/* #chapter-viewer ion-fab .center {
-  right: 0;
-} */
 
 .helper-container {
   display: flex;
